--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,22 +13,53 @@
      </ul>
 </header>
 <main>
-<a href="https://twitter.com/jack/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
      <article>
-     <p>the first paragraph</p>
+<p>the first paragraph</p>
 <p>the second paragraph</p>
 <p>the third paragraph</p>
 <p>the fourth paragraph</p>
 <h1>heading one</h1>
 <h2>heading two</h2>
-<h>heading three</h3>
+<h3>heading three</h3>
 <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png image" alt="ALX Africa logo">
 <a href="./tweets.html">homepage</a>
+
+     <table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Age</th>
+      <th>Country</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>John</td>
+      <td>25</td>
+      <td>USA</td>
+    </tr>
+    <tr>
+      <td>Emily</td>
+      <td>28</td>
+      <td>Canada</td>
+    </tr>
+    <tr>
+      <td>Michael</td>
+      <td>32</td>
+      <td>Australia</td>
+    </tr>
+    <tr>
+      <td>Sophia</td>
+      <td>21</td>
+      <td>UK</td>
+    </tr>
+  </tbody>
+     </table>
 </article>
 <aside>placeholder to add comment thread later</aside>
 </main>
 <footer>
-  <p>made by Blessing - <a href="#" target="_blank">about me</a></p>
+     <p>made by Blessing - <a href="#" target="_blank">about me</a></p>
 </footer>
 </body>
 </html>
