add blockquote for tweet link

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,6 +13,7 @@
      </ul>
 </header>
 <main>
+<blockquote class="twitter-tweet">
 <a href="https://twitter.com/jack/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
      <article>
      <p>the first paragraph</p>
