remove article from inside blokquote

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,28 +3,35 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Basic html page</title>
+     <title>Tweets page</title>
 </head>
 <body>
 <header>
      <ul>
           <li><a href="./index.html">homepage</a></li>
-          <li><a href="./tweets.html">yeet page</a></li>
+          <li><a href="./tweets.html">tweets page</a></li>
      </ul>
 </header>
-<main>
-     <article>
-<p>the first paragraph</p>
-<p>the second paragraph</p>
-<p>the third paragraph</p>
-<p>the fourth paragraph</p>
-<h1>heading one</h1>
-<h2>heading two</h2>
-<h3>heading three</h3>
-<img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png image" alt="ALX Africa logo">
-<a href="./tweets.html">homepage</a>
 
-     <table>
+<main>
+     <blockquote class="twitter-tweet">
+       <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack)
+       <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
+     </blockquote>
+
+     <article>
+          <p>the first paragraph</p>
+          <p>the second paragraph</p>
+          <p>the third paragraph</p>
+          <p>the fourth paragraph</p>
+          <h1>heading one</h1>
+          <h2>heading two</h2>
+          <h3>heading three</h3>
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Africa logo">
+          <a href="./tweets.html">homepage</a>
+     </article>
+     <article>
+          <table>
   <thead>
     <tr>
       <th>Name</th>
@@ -54,12 +61,19 @@
       <td>UK</td>
     </tr>
   </tbody>
-     </table>
-</article>
-<aside>placeholder to add comment thread later</aside>
+</table>
+
+     </article>
+
+     <aside>
+          placeholder to add comment thread later
+     </aside>
 </main>
+
 <footer>
-     <p>made by Blessing - <a href="#" target="_blank">about me</a></p>
+  <p>made by Blessing - <a href="#" target="_blank">about me</a></p>
 </footer>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
+
