remove article from inside blokquote

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 <header>
-     <ul>
+     <nav>
+          <ul>
           <li><a href="./index.html">homepage</a></li>
           <li><a href="./tweets.html">tweets page</a></li>
      </ul>
+     </nav>
+     
 </header>
 
 <main>
@@ -73,7 +76,6 @@
 <footer>
   <p>made by Blessing - <a href="#" target="_blank">about me</a></p>
 </footer>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
 
