--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -7,17 +7,21 @@
 </head>
 <body>
 <header>
-     <ul>
+      <nav>
+          <ul>
           <li><a href="./index.html">homepage</a></li>
           <li><a href="./tweets.html">tweets page</a></li>
      </ul>
+     </nav>
 </header>
 
 <main>
+     <article>
      <blockquote class="twitter-tweet">
        <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack)
        <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
      </blockquote>
+     </article>
 
      <article>
           <p>the first paragraph</p>
@@ -39,7 +43,6 @@
 <footer>
   <p>made by Blessing - <a href="#" target="_blank">about me</a></p>
 </footer>
-
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
