add url to link tag

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -23,15 +23,16 @@
      </blockquote>
 
      <article>
+          
+          <h1>heading one</h1>
+          <h2>heading two</h2>
+          <h3>heading three</h3>
           <p>the first paragraph</p>
           <p>the second paragraph</p>
           <p>the third paragraph</p>
           <p>the fourth paragraph</p>
-          <h1>heading one</h1>
-          <h2>heading two</h2>
-          <h3>heading three</h3>
           <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Africa logo">
-          <a href="./tweets.html">homepage</a>
+          <a href="./tweets.html">tweetpage</a>
      </article>
      <article>
           <table>
@@ -74,7 +75,7 @@
 </main>
 
 <footer>
-  <p>made by Blessing - <a href="#" target="_blank">about me</a></p>
+  <p>made by Blessing - <a href="./index.html" target="_blank">about me</a></p>
 </footer>
 </body>
 </html>
