add portfolio page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="UTF-8">
+     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Blessing Eguagie-Personal Portfolio</title>
+     <title>Blessing Eguagie - Personal Portfolio</title>
 </head>
 <body>
    <header>
@@ -16,28 +16,28 @@
     <nav>
         <ul>
             <li>
-                <a href="#Introduction">Introduction</a>
+                <a href="#introduction">Introduction</a>
             </li>
             <li>
-                <a href="#Projects">Projects</a>
+                <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#About Me">About Me</a>
+                <a href="#about Me">About Me</a>
             </li>
             <li>
-                <a href="#Contact">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
         </ul>
     </nav>
    </header> 
    <main>
-    <section id="Introduction">
+    <section id="introduction">
         <h2>Introduction</h2>
         <p>
             Hello! I'm Blessing Eguagie, an aspiring web developer with a passion for creating responsive and user-friendly websites. I enjoy turning complex problems into simple, elegant solutions.
         </p>
     </section>
-    <section id="Projects">
+    <section id="projects">
     <h2>Projects</h2>
     <article class="project">
         <h3>Project 1</h3>
@@ -67,7 +67,7 @@
    </section>
    </main>
    <footer>
-    <p>&copy; 2025 Blessing Eguagie</p>
+    <p> &copy; 2025 Blessing Eguagie</p>
    </footer>
 </body>
 </html>
