--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,82 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Tweets page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Portfolio</title>
 </head>
 <body>
-<header>
-     <nav>
-          <ul>
-          <li><a href="./index.html">homepage</a></li>
-          <li><a href="./tweets.html">tweets page</a></li>
-     </ul>
-     </nav>
-     
-</header>
+  <header>
+    <h1>Blessing Eguagie</h1>
+    <p>Passionate about building responsive, user-friendly websites and continuously learning modern web technologies.</p>
+    <nav>
+      <ul>
+        <li><a href="./index.html">homepage</a></li>
+        <li><a href="./tweets.html">tweets page</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<main>
-     <blockquote class="twitter-tweet">
-       <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack)
-       <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
-     </blockquote>
+  <main>
+    <article>
+      <h1>heading one</h1>
+      <h2>heading two</h2>
+      <h3>heading three</h3>
+      <p>the first paragraph</p>
+      <p>the second paragraph</p>
+      <p>the third paragraph</p>
+      <p>the fourth paragraph</p>
+      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Africa logo">
+      <a href="./tweets.html">tweetpage</a>
 
-     <article>
-          
-          <h1>heading one</h1>
-          <h2>heading two</h2>
-          <h3>heading three</h3>
-          <p>the first paragraph</p>
-          <p>the second paragraph</p>
-          <p>the third paragraph</p>
-          <p>the fourth paragraph</p>
-          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Africa logo">
-          <a href="./tweets.html">tweetpage</a>
-     </article>
-     <article>
-          <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Country</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>John</td>
-      <td>25</td>
-      <td>USA</td>
-    </tr>
-    <tr>
-      <td>Emily</td>
-      <td>28</td>
-      <td>Canada</td>
-    </tr>
-    <tr>
-      <td>Michael</td>
-      <td>32</td>
-      <td>Australia</td>
-    </tr>
-    <tr>
-      <td>Sophia</td>
-      <td>21</td>
-      <td>UK</td>
-    </tr>
-  </tbody>
-</table>
+      <table>
+        <thead>
+          <tr><th>Name</th><th>Age</th><th>Country</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>John</td><td>25</td><td>USA</td></tr>
+          <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+          <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+          <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+        </tbody>
+      </table>
+    </article>
 
-     </article>
+    <aside>placeholder to add comment thread later</aside>
+  </main>
 
-     <aside>
-          placeholder to add comment thread later
-     </aside>
-</main>
-
-<footer>
-  <p>made by Blessing - <a href="./index.html" target="_blank">about me</a></p>
-</footer>
+  <footer>
+    <p>Made by Blessing - <a href='./index.html' target='_blank'>about me</a></p>
+  </footer>
 </body>
 </html>
 
