--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -47,3 +47,47 @@
 </body>
 </html>
 
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Portfolio</title>
+</head>
+<body>
+  <header>
+    <h1>Blessing Eguagie</h1>
+    <p>Passionate about building responsive, user-friendly websites and continuously learning modern web technologies.</p>
+    <nav>
+      <ul>
+        <li><a href="./index.html">homepage</a></li>
+        <li><a href="./tweets.html">tweets page</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <article>
+      <h1>heading one</h1>
+      <h2>heading two</h2>
+      <h3>heading three</h3>
+      <p>the first paragraph</p>
+      <p>the second paragraph</p>
+      <p>the third paragraph</p>
+      <p>the fourth paragraph</p>
+      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Africa logo">
+      <a href="./tweets.html">tweetpage</a>
+    </article>
+     <aside>placeholder to add comment thread later</aside>
+  </main>
+  <footer>
+    <p>Made by Blessing - <a href='./index.html' target='_blank'>about me</a></p>
+  </footer>
+</body>
+</html>
+
+
